Switch from onbuild to maven 3 alpine